make animation in section -> hover

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -16,24 +16,34 @@
                 pour des repas
                 sains et équilibrés à la cantine Aston</h2>
         </div>
-        <div class="container red">
+        <div class="container">
             <div class="row center">
-                <div class="col-md-4 col-sm-3 ">
-                    <div class="images-prestation">
+                <div class="col-md-4 col-sm-12 ">
+
+                    <div class="images-presentation">
                         <h4> Nos Menus </h4>
-                        <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
+                        <a href=""> <img alt="No s  menus " src="../../../assets/images/menu.jpg"> </a>
+                          <div class="presentation-footer">
+                                  <p class="presentation-footer-text"> Je choisis Mon  Menu</p>
+                                 <button class="presentation-footer-button  btn"> Menu </button>
+                        </div>
                     </div>
+
+
+
                 </div>
                 <div class=" col-md-4  col-sm-12 ">
-                    <div class="images-prestation">
-                        <h4> Nos Plats </h4>
+                    <div class="images-presentation">
+                        <h4> Nos
+                            Plats </h4>
                         <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <div class="images-prestation">
+                    <div class="images-presentation">
                         <h4> Nos Boisson </h4>
-                        <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
+                        <a href=""> <img class="cola-img" alt="Nos  Boisson " src="../../../assets/images/cola.jpg">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -56,125 +66,3 @@
     </div>
 
 </section>
-<!--
-<section>
-    <div class="container-fluid">
-        <div id="text-intro">
-            <h2 class="center">Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
-                sains et équilibrés à la cantine Aston</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
-                facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
-                illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
-        </div>
-
-            <div class="row center ">
-                <div class="col-md-4 col-sm-12 ">
-                    <div class="images-prestation">
-                        <h4> Nos Menus </h4>
-                        <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
-                    </div>
-                </div>
-                <div class=" col-md-4  col-sm-12 ">
-                    <div class="images-prestation">
-                        <h4> Nos  Plats </h4>
-                        <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-12">
-                    <div class="images-prestation">
-                        <h4> Nos Boisson </h4>
-                        <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-</section>
--->
-
-
-<!--
--->
-
-<!--<section>
-            <div id="text-intro">
-                  <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
-                        sains et équilibrés à la cantine Aston</h2>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
-                        facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
-                        illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
-            </div>
-   
-              <div id="prestation">
-                  <div class="images-prestation">
-                        <h4> Nos  Menus </h4>
-                        <a href=""> <img src="../../../assets/images/menu.jpg" alt="Nos  menus "> </a>
-                   </div>
-              </div>
-              <div>
-                  <div class="images-prestation">
-                        <h4> Nos  Plats </h4>
-                        <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
-                   </div>
-                 
-              </div>
-              <div>
-                  <div class="images-prestation">
-                        <h4> Nos Boisson </h4>
-                        <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
-                   </div>
-                  
-              
-            </div>
-     
-
- <div class="container-fluid">
-  <div class="row">
-            <div id="text-intro">
-                  <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
-                        sains et équilibrés à la cantine Aston</h2>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
-                        facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
-                        illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
-            </div>
-            <div id="prestation">
-                   <div class="images-prestation">
-                        <h4> Nos  Menus </h4>
-                        <a href=""> <img src="../../../assets/images/menu.jpg" alt="Nos  menus "> </a>
-                   </div>
-                   <div class="images-prestation">
-                        <h4> Nos  Plats </h4>
-                        <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
-                   </div>
-                   <div class="images-prestation">
-                        <h4> Nos Boisson </h4>
-                        <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
-                   </div>
-            </div>
-      </div>
- </div>
-
-
-
-
-Commandez  vos   repas  composé de plats equilibrés et sains  et des menus variés  pour  toute la semaine  à la cantine Aston
-profitez de nos menus  à  partir de  5.50€  et  nos  plats  à  partir de  3.50€
-les  plats  sont  livrés  dans  dans  les plus brefs délais  et  sont  préparés  avec  des  produits frais  et  de  qualité
-
-
-
-  <div class="container">
-            <div class="row">
-              <div class="col-sm">
-                One of three columns
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
-            </div>
-          </div>
--->     
