--- a/Frontend/Cantine/src/assets/styles/home.component.scss
+++ b/Frontend/Cantine/src/assets/styles/home.component.scss
@@ -61,19 +61,29 @@ section {
     margin-top: 50px;
   }
 
-  .images-prestation {
+  .images-presentation {
+    position:  relative;
+    overflow: hidden;
+    border: 1px solid black;
+    transition: transform 0.5s  ease-out;
+    .presentation-footer{
+        position: absolute;
+      width: 100%;
+    }
+
     h4 {
       font-family: 'Dancing Script', cursive;
       font-size: 1.8em;
       margin: 15px;
       font-weight: 500;
     }
-
     img {
-      width: 42%;
-      height: 40vh;
       border-radius: 20px;
+      width: 70%;
       box-shadow: 5px 5px 3px 1px rgba(0, 0, 0, 0.7);
+    }
+    .cola-img {
+       height: 43vh;
     }
   }
 
@@ -85,7 +95,7 @@ section {
 
 @media (max-width: 768px) {
   section {
-    .images-prestation {
+    .images-presentation {
       img {
         width: 100%;
         height: calc(100% - 20px);
