continue to  make  animation  in  home::section

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -19,16 +19,16 @@
         <div class="container">
             <div class="row center">
                 <div class="col-md-4 col-sm-12 ">
-
                     <div class="images-presentation">
                         <h4> Nos Menus </h4>
-                        <a href=""> <img alt="No s  menus " src="../../../assets/images/menu.jpg"> </a>
-                          <div class="presentation-footer">
-                                  <p class="presentation-footer-text"> Je choisis Mon  Menu</p>
-                                 <button class="presentation-footer-button  btn"> Menu </button>
+                        <div class="presentation-footer">
+                            <a href=""> <img alt="No s  menus " src="../../../assets/images/menu.jpg"> </a>
+                            <div class="presentation-footer-container">
+                                <p class="presentation-footer-container-text">Je choisis Mon Menu </p>
+                                <button class="presentation-footer-container-button  btn"> Menu</button>
+                            </div>
                         </div>
                     </div>
-
 
 
                 </div>
