change  style of main-section in home

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -19,10 +19,11 @@
         <div class="container">
             <div class="row center">
                 <div class="col-md-4 col-sm-12 ">
+
                     <div class="images-presentation">
                         <h4> Nos Menus </h4>
                         <div class="presentation-footer">
-                            <a href=""> <img alt="No s  menus " src="../../../assets/images/menu.jpg"> </a>
+                           <img alt="No s  menus " src="../../../assets/images/menuRE.jpg">
                             <div class="presentation-footer-container">
                                 <p class="presentation-footer-container-text">Je choisis Mon Menu </p>
                                 <button class="presentation-footer-container-button  btn"> Menu</button>
@@ -33,17 +34,30 @@
 
                 </div>
                 <div class=" col-md-4  col-sm-12 ">
+
                     <div class="images-presentation">
-                        <h4> Nos
-                            Plats </h4>
-                        <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
+                        <h4> Nos Plats </h4>
+                        <div class="presentation-footer">
+                          <img alt="No s  menus " src="../../../assets/images/mealRE.jpg">
+                            <div class="presentation-footer-container ">
+                                <p class="presentation-footer-container-text">Je choisis Mon plat </p>
+                                <button class="presentation-footer-container-button  btn"> Plat</button>
+                            </div>
+                        </div>
                     </div>
+
+
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="images-presentation">
-                        <h4> Nos Boisson </h4>
-                        <a href=""> <img class="cola-img" alt="Nos  Boisson " src="../../../assets/images/cola.jpg">
-                        </a>
+                        <h4> Nos  Boissons  </h4>
+                        <div class="presentation-footer">
+                                <img alt="No s  menus " src="../../../assets/images/colaRE.jpg">
+                            <div class="presentation-footer-container">
+                                <p class="presentation-footer-container-text">Je choisis  Ma Boisson  </p>
+                                <button class="presentation-footer-container-button  btn">  Boisson </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
