add basic style for  home  page

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -16,67 +16,53 @@
                 pour des repas
                 sains et équilibrés à la cantine Aston</h2>
         </div>
-        <div class="container">
-            <div class="row center">
-                <div class="col-md-4 col-sm-12 ">
+        <div class="container-fluid center ">
+            <div class="row">
 
+                <div class="col-md-4 col-sm-12 ">
                     <div class="images-presentation">
                         <h4> Nos Menus </h4>
-                        <div class="presentation-footer">
-                           <img alt="No s  menus " src="../../../assets/images/menuRE.jpg">
-                            <div class="presentation-footer-container">
-                                <p class="presentation-footer-container-text">Je choisis Mon Menu </p>
-                                <button class="presentation-footer-container-button  btn"> Menu</button>
-                            </div>
-                        </div>
+                        <img alt="No s  menus " src="../../../assets/images/menuRE.jpg">
                     </div>
-
-
                 </div>
-                <div class=" col-md-4  col-sm-12 ">
 
+
+                <div class=" col-md-4  col-sm-12 ">
                     <div class="images-presentation">
                         <h4> Nos Plats </h4>
-                        <div class="presentation-footer">
-                          <img alt="No s  menus " src="../../../assets/images/mealRE.jpg">
-                            <div class="presentation-footer-container ">
-                                <p class="presentation-footer-container-text">Je choisis Mon plat </p>
-                                <button class="presentation-footer-container-button  btn"> Plat</button>
-                            </div>
-                        </div>
+                        <img alt="No s  menus " src="../../../assets/images/mealRE.jpg">
                     </div>
-
-
                 </div>
+
+
                 <div class="col-md-4 col-sm-12">
                     <div class="images-presentation">
-                        <h4> Nos  Boissons  </h4>
-                        <div class="presentation-footer">
-                                <img alt="No s  menus " src="../../../assets/images/colaRE.jpg">
-                            <div class="presentation-footer-container">
-                                <p class="presentation-footer-container-text">Je choisis  Ma Boisson  </p>
-                                <button class="presentation-footer-container-button  btn">  Boisson </button>
-                            </div>
-                        </div>
+                        <h4> Nos Boissons </h4>
+                        <img alt="No s  menus " src="../../../assets/images/colaRE.jpg">
                     </div>
                 </div>
+
+
             </div>
-        </div>
-        <div>
 
         </div>
+    </div>
 
 
-        <!--        <p>-->
-        <!--        Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour-->
-        <!--        <div class="container">-->
-
-
-        <!--        toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats-->
-        <!--            à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans-->
-        <!--            les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.-->
-        <!--        </p>-->
+    <div>
 
     </div>
+
+
+    <!--        <p>-->
+    <!--        Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour-->
+    <!--        <div class="container">-->
+
+
+    <!--        toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats-->
+    <!--            à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans-->
+    <!--            les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.-->
+    <!--        </p>-->
+
 
 </section>
