update  admin  router

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -1,89 +1,1 @@
-<mat-toolbar>
-    <button (click)="sidenav.toggle()" *ngIf="isconnected" class="burgger" mat-icon-button>
-        <div *ngIf="!sidenav.opened">
-            <img alt="cantière-logo" src="../../assets/logo.png">
-        </div>
-        <div *ngIf="sidenav.opened">
-            <img alt="cantière-logo" src="../../assets/logo.png">
-        </div>
-    </button>
-    <div *ngIf="!isconnected">
-        <a href="#"> <img alt="cantière-logo" src="../../assets/logo.png"> </a>
-
-    </div>
-
-    <div class="logo-container">
-        <div class="sqli-div"><span class="cantière-span center">Cantière</span> <br>
-            <div class="bysqli"><span class="by">By</span> <span class="sqli">SQLI </span></div>
-        </div>
-    </div>
-    <div class="connect">
-        <button>
-            <mat-icon>logout</mat-icon>
-            Deconnexion
-        </button>
-    </div>
-    <div *ngIf="isconnected" class="not-connect-login-small">
-        <mat-icon>logout</mat-icon>
-    </div>
-    <div *ngIf="!isconnected" class="not-connect-login-small">
-        <mat-icon>login</mat-icon>
-    </div>
-</mat-toolbar>
-<mat-sidenav-container>
-    <mat-sidenav #sidenav="matSidenav">
-
-        <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200"/>
-
-        <h4 class="name">John Smith</h4>
-        <p class="designation"> Aston Student 😇 </p>
-
-        <mat-divider></mat-divider>
-
-        <button class="menu-button" mat-button>
-            <mat-icon>home</mat-icon>
-            <span>Home</span>
-        </button>
-        <button class="menu-button" mat-button>
-            <mat-icon>person</mat-icon>
-            <span>Profile</span>
-        </button>
-
-        <button class="menu-button" mat-button>
-            <mat-icon>shopping_cart</mat-icon>
-            <span>Mon Panier </span>
-            <mat-icon class="badge" matBadge="10" matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
-
-        </button>
-
-
-        <mat-divider></mat-divider>
-
-        <button class="menu-button" mat-button>
-            <mat-icon> restaurant_menu</mat-icon>
-            <span>Menus</span>
-        </button>
-        <button class="menu-button" mat-button>
-            <mat-icon>lunch_dining</mat-icon>
-            <span>Plats</span>
-        </button>
-
-        <mat-divider></mat-divider>
-
-        <button class="menu-button" mat-button>
-
-            <mat-icon>logout</mat-icon>
-            <span>Deconnexion</span>
-        </button>
-
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <main>    <!-- content  -->
-            <router-outlet></router-outlet>     <!--  main  container  -->
-        </main>
-        <app-main-footer></app-main-footer>     <!-- footer  -->
-    </mat-sidenav-content>
-</mat-sidenav-container>
-
-
-
+<h1> Its  works </h1>
