--- a/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
@@ -1,31 +1,52 @@
-<div class="container red ">
+<div class="container ">
     <div class="row">
-    <div class="text-center">
-        <img class="form-logo" src="../../../../assets/images/logo.png" width="80px" alt="logo">
-        <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
-    </div>
+        <div class="text-center">
+            <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
+            <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
+        </div>
 
-    <div class="register-form">
-        <form [formGroup]="newMeal" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label>Le Nom du Plat </label>
-                <input type="text" formControlName="mealname" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f['label'].errors }"
-                       placeholder="Le Nom du  Plat " />
-                <div *ngIf="submitted && f['label'].errors" class="invalid-feedback">
-                    <div *ngIf="f['label'].errors['required']"> Nom du plat est requis </div>
-                    <div *ngIf="f['label'].errors['maxlength']">
-                        le nom du plat ne doit pas dépasser 16 charctéres
-                    </div>
-                    <div *ngIf="f['label'].errors['minlength']">
-                        le nom du plat ne doit avoir plus de 3 charctéres
+        <div class="register-form">
+            <form (ngSubmit)="onSubmit()" [formGroup]="newMeal">
+
+                <!---------------------- label --------------------------->
+                <div class="form-group">
+                    <label>Le Nom du Plat </label>
+                    <input [ngClass]="{ 'is-invalid': submitted && f['label'].errors }" class="form-control" formControlName="mealname"
+                           placeholder="Le Nom du  Plat "
+                           type="text"/>
+                    <div *ngIf="submitted && f['label'].errors" class="invalid-feedback">
+                        <div *ngIf="f['label'].errors['required']"> Nom du plat est requis</div>
+                        <div *ngIf="f['label'].errors['maxlength']">
+                            le nom du plat ne doit pas dépasser 60 charctéres
+                        </div>
+                        <div *ngIf="f['label'].errors['minlength']">
+                            le nom du plat ne doit avoir au minimum  de 3 charctéres
+                        </div>
                     </div>
                 </div>
-            </div>
+
+                <!---------------------- price --------------------------->
+                <div class="form-group">
+                    <label>Le prix  </label>
+                    <input [ngClass]="{ 'is-invalid': submitted && f['price'].errors }" class="form-control" formControlName="mealname"
+                           placeholder="Le prix du  Plat "
+                           type="number"/>
+                    <div *ngIf="submitted && f['price'].errors" class="invalid-feedback">
+                        <div *ngIf="f['price'].errors['required']"> Nom du plat est requis</div>
+                        <div *ngIf="f['price'].errors['maxlength']">
+                            le nom du plat ne doit pas dépasser 60 charctéres
+                        </div>
+                        <div *ngIf="f['price'].errors['minlength']">
+                            le nom du plat ne doit avoir au minimum  de 3 charctéres
+                        </div>
+                    </div>
+                </div>
 
 
-        </form>
-    </div>
+
+
+            </form>
+        </div>
     </div>
 </div>
 
