--- a/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
@@ -1,118 +1,145 @@
-<div class="container ">
-    <div class="row">
-        <div class="text-center">
-            <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
-            <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
-        </div>
-              <h1 class="center"> Ajouter  un  Plat </h1>
-        <div class="register-form">
-            <form [formGroup]="newMeal" (ngSubmit)="onSubmit()">
-
-
-
-                <!---------------------- label --------------------------->
-                <div class="form-group ">
-                    <label> Nom  </label>
-                    <input [ngClass]="{ 'is-invalid': submitted && f['label'].errors }" class="form-control" formControlName="label"
-                           placeholder="Le Nom du  Plat "
-                           type="text"/>
-                    <div *ngIf="submitted && f['label'].errors" class="invalid-feedback">
-                        <div *ngIf="f['label'].errors['required']" class="center"> Nom du plat est requis</div>
-                        <div *ngIf="f['label'].errors['maxlength']" class="center" >
-                            le nom du plat ne doit pas dépasser 60 charctéres
-                        </div>
-                        <div *ngIf="f['label'].errors['minlength']" class="center" >
-                            le nom du plat ne doit avoir au minimum  de 3 charctéres
-                        </div>
+<div class="container first  first-container">
+    <div class="row first">
+          <div class="container second">
+                <div class="row">
+                    <div class="text-center">
+                        <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
+                        <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
                     </div>
-                </div>
+                    <h1 class="center"> Ajouter  un  Plat </h1>
+                    <div class="register-form ">
+                        <form [formGroup]="newMeal" (ngSubmit)="onSubmit()">
 
-                <!---------------------- description --------------------------->
-                <div class="form-group">
-                    <label> Description  </label>
-                    <textarea [ngClass]="{ 'is-invalid': submitted && f['description'].errors }" class="form-control" formControlName="description"
-                           placeholder=" Description du  Plat  "
-                           type="text"> </textarea>
-                    <div *ngIf="submitted && f['description'].errors" class="invalid-feedback">
-                        <div *ngIf="f['description'].errors['required']"  class="center"> Description du plat est requis</div>
-                        <div *ngIf="f['description'].errors['maxlength']" class="center">
-                            Description du plat ne doit pas dépasser 400 charctéres
-                        </div>
-                        <div *ngIf="f['description'].errors['minlength']" class="center" >
-                            Description du  plat ne doit avoir au minimum  de 5 charctéres
-                        </div>
+
+
+                            <!---------------------- label --------------------------->
+                            <div class="form-group ">
+                                <label> Nom  </label>
+                                <input [ngClass]="{ 'is-invalid': submitted && f['label'].errors }" class="form-control" formControlName="label"
+                                       placeholder="Le Nom du  Plat "
+                                       type="text"/>
+                                <div *ngIf="submitted && f['label'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['label'].errors['required']" class="center"> Nom du plat est requis</div>
+                                    <div *ngIf="f['label'].errors['maxlength']" class="center" >
+                                        le nom du plat ne doit pas dépasser 60 charctéres
+                                    </div>
+                                    <div *ngIf="f['label'].errors['minlength']" class="center" >
+                                        le nom du plat ne doit avoir au minimum  de 3 charctéres
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!---------------------- description --------------------------->
+                            <div class="form-group">
+                                <label> Description  </label>
+                                <textarea [ngClass]="{ 'is-invalid': submitted && f['description'].errors }" class="form-control" formControlName="description"
+                                          placeholder=" Description du  Plat  "
+                                          type="text"> </textarea>
+                                <div *ngIf="submitted && f['description'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['description'].errors['required']"  class="center"> Description du plat est requis</div>
+                                    <div *ngIf="f['description'].errors['maxlength']" class="center">
+                                        Description du plat ne doit pas dépasser 400 charctéres
+                                    </div>
+                                    <div *ngIf="f['description'].errors['minlength']" class="center" >
+                                        Description du  plat ne doit avoir au minimum  de 5 charctéres
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!---------------------- price --------------------------->
+                            <div class="form-group">
+                                <label>Le prix  </label>
+                                <div class="input-group">
+                                    <input class="input-group-prepend" [ngClass]="{ 'is-invalid': submitted && f['price'].errors }" class="form-control" formControlName="price"
+                                           placeholder="Le prix du  Plat "
+                                           type="number"/>
+                                    <span class="input-group-text">€</span>
+                                </div>
+
+                                <div *ngIf="submitted && f['price'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['price'].errors['required']" class="center"> le prix  du plat est requis</div>
+                                </div>
+
+                            </div>
+
+
+
+
+                            <!---------------------- Quantity --------------------------->
+                            <div class="form-group">
+                                <label>Le quatité      </label>
+                                <input [ngClass]="{ 'is-invalid': submitted && f['quantity'].errors }" class="form-control" formControlName="quantity"
+                                       placeholder="Le quatité des plats  disponible "
+                                       type="number"/>
+                                <div *ngIf="submitted && f['quantity'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['quantity'].errors['required']" class="center"> La quantité  est requis</div>
+                                    <div *ngIf="f['quantity'].errors['pattern']" class="center" >la quantity est un  entier </div>
+                                </div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <label> Catégorie </label>
+                                <select formControlName="category" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submitted && f['category'].errors }" name="category">
+                                    <option value="">-- Catégorie Du Plat --</option>
+                                    <option value="Hamburgers">Hamburgers </option>
+                                    <option value="Nuggets de poulet">Nuggets de poulet</option>
+                                    <option value="Volailles cuites">Volailles cuites</option>
+                                    <option value="Viandes">Viandes</option>
+                                    <option value="Plats à la volaille">Plats à la volaille</option>
+                                    <option value="Poulets">Poulets</option>
+                                </select>
+                                <div *ngIf="submitted && f['category'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['category'].errors['required']" class="center"> une catégorie est requise </div>
+
+                                </div>
+                            </div>
+
+
+
+
+
+
+                            <!---------------------- status --------------------------->
+                            <div class="form-group">
+                                <label> Le plat  est t-il  disponible ?     </label>
+                                <mat-radio-group aria-label="Select an option"[ngClass]="{ 'is-invalid': submitted && f['status'].errors }" class="form-control" formControlName="status" >
+                                    <mat-radio-button value="available" > Plat Disponible </mat-radio-button>
+                                    <mat-radio-button value="unavailable" > Plat n'est  Disponible </mat-radio-button>
+                                </mat-radio-group>
+                                <div *ngIf="submitted && f['status'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['status'].errors['required']" class="center"> le status  du  plat   est requise </div>
+                                </div>
+                            </div>
+
+                            <!---------------------- Image --------------------------->
+                            <div class="form-group">
+                                <label>Le prix  </label>
+                                <div class="input-group">
+                                    <input class="input-group-prepend" [ngClass]="{ 'is-invalid': submitted && f['image'].errors }" class="form-control" formControlName="price"
+                                           placeholder="Le prix du  Plat "
+                                           type="number"/>
+                                    <span class="input-group-text">€</span>
+                                </div>
+
+                                <div *ngIf="submitted && f['price'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['price'].errors['required']" class="center"> le prix  du plat est requis</div>
+                                </div>
+
+                            </div>
+
+
+
+
+                        </form>
+                        <button  (click)="onSubmit()" class="btn center">  Enregistrer </button>
+
                     </div>
-                </div>
+            </div>
+          </div>
 
-                <!---------------------- price --------------------------->
-                <div class="form-group">
-                    <label>Le prix  </label>
-                    <input [ngClass]="{ 'is-invalid': submitted && f['price'].errors }" class="form-control" formControlName="price"
-                           placeholder="Le prix du  Plat "
-                           type="number"/> <span class="input-group-addon">€</span>
-                    <div *ngIf="submitted && f['price'].errors" class="invalid-feedback">
-                        <div *ngIf="f['price'].errors['required']" class="center"> le prix  du plat est requis</div>
-                    </div>
-
-                </div>
-
-
-
-
-                <!---------------------- Quantity --------------------------->
-                <div class="form-group">
-                    <label>Le quatité      </label>
-                    <input [ngClass]="{ 'is-invalid': submitted && f['quantity'].errors }" class="form-control" formControlName="quantity"
-                           placeholder="Le quatité des plats  disponible "
-                           type="number"/>
-                    <div *ngIf="submitted && f['quantity'].errors" class="invalid-feedback">
-                        <div *ngIf="f['quantity'].errors['required']" class="center"> La quantité  est requis</div>
-                        <div *ngIf="f['quantity'].errors['pattern']" class="center" >la quantity est un  entier </div>
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label> Catégorie </label>
-                    <select formControlName="category" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f['category'].errors }" name="category">
-                        <option value="">-- Catégorie Du Plat --</option>
-                        <option value="Hamburgers">Hamburgers </option>
-                        <option value="Nuggets de poulet">Nuggets de poulet</option>
-                        <option value="Volailles cuites">Volailles cuites</option>
-                        <option value="Viandes">Viandes</option>
-                        <option value="Plats à la volaille">Plats à la volaille</option>
-                        <option value="Poulets">Poulets</option>
-                    </select>
-                    <div *ngIf="submitted && f['category'].errors" class="invalid-feedback">
-                        <div *ngIf="f['category'].errors['required']" class="center"> une catégorie est requise </div>
-                        <
-                    </div>
-                </div>
-
-
-
-
-
-
-                <!---------------------- status --------------------------->
-                <div class="form-group">
-                    <label> Le plat  est t-il  disponible ?     </label>
-                    <mat-radio-group aria-label="Select an option"[ngClass]="{ 'is-invalid': submitted && f['status'].errors }" class="form-control" formControlName="status" >
-                        <mat-radio-button value="available" > Plat Disponible </mat-radio-button>
-                        <mat-radio-button value="unavailable" > Plat n'est  Disponible </mat-radio-button>
-                    </mat-radio-group>
-                    <div *ngIf="submitted && f['status'].errors" class="invalid-feedback">
-                        <div *ngIf="f['status'].errors['required']" class="center"> le status  du  plat   est requise </div>
-                    </div>
-                </div>
-
-            </form>
-            <button  (click)="onSubmit()" class="btn center">  Enregistrer </button>
-
-        </div>
     </div>
-
 </div>
 
 
